add reference to jack's THH document

--- a/main.bib
+++ b/main.bib
@@ -2872,6 +2872,15 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1017/CBO9780511721489.014},
 }
 
+@article{MoravaTHH,
+  author = {Morava, Jack},
+  title = {Complex orientations for {$THH$} of some perfectoid fields},
+  archivePrefix = "arXiv",
+  eprint = {1608.04702},
+  primaryClass = "math.AT",
+  year = {2016}
+}
+
 @article {Morton,
     AUTHOR = {Morton, Dena S. Cowen},
      TITLE = {The {H}opf ring for {$b{\rm o}$} and its connective covers},
