--- a/sigma.tex
+++ b/sigma.tex
@@ -1308,7 +1308,7 @@ where \(G_{2k}\) is the \(2k\){\th} Eisenstein series.  Noting that \(G_2\) is \
 \end{remark}
 
 \begin{remark}[{\cite{AndoMorava}}]
-Another location where this series \(\psi\) appears is in the theory of \index{p divisible group@\(p\)--divisible group!Tate}Tate \(p\)--divisible groups of Ando and Morava (and, in some sense, in the sense of Katz and Mazur~\cite[Sections 8.7--8]{KatzMazur}).  For a formal group \(\G\) over \(\Spf R\) with group law \(+_\phi\), they consider the Weierstrass product \[\Theta_{\phi}(x; q) = x \cdot \prod_{\substack{k \in \Z \\ k \ne 0}} \frac{(x +_\phi [k]_\phi(q))}{[k]_\phi(q)} \in R\ps{x,q},\] which plays the role of a kind of \(\theta\)--function for \(\G\).  They also connect this series the \index{formal group!quotient}quotient function mapping to the group scheme \(\G / q^{\Z}\) (in the sense of \Cref{NormForFns}), which they further identify as the \index{formal group!universal constant extension}universal extension of \(\G\) by a constant \(p\)--divisible group of dimension \(1\).  In the presense of a global object \(\mathbb G\) specializing to \(\G\) (as in the case of \(\G_a\) or \(\G_m\)), they show how to modify this product to an analytically convergent power series, recovering the characteristic series for the \index{orientation!A hat genus@\(\widehat A\)--genus}\(\widehat A\)--genus and the \index{orientation!L genus@\(L\)--genus}\(L\)--genus.  The higher height analogues of these results seem very mysterious and very interesting.\footnote{Morava is generally full of interesting ideas about genera---see, for instance,~\cite{MoravaMotivicThomIso}.}
+Another location where this series \(\psi\) appears is in the theory of \index{p divisible group@\(p\)--divisible group!Tate}Tate \(p\)--divisible groups of Ando and Morava (and, in some sense, in the sense of Katz and Mazur~\cite[Sections 8.7--8]{KatzMazur}).  For a formal group \(\G\) over \(\Spf R\) with group law \(+_\phi\), they consider the Weierstrass product \[\Theta_{\phi}(x; q) = x \cdot \prod_{\substack{k \in \Z \\ k \ne 0}} \frac{(x +_\phi [k]_\phi(q))}{[k]_\phi(q)} \in R\ps{x,q},\] which plays the role of a kind of \(\theta\)--function for \(\G\).  They also connect this series the \index{formal group!quotient}quotient function mapping to the group scheme \(\G / q^{\Z}\) (in the sense of \Cref{NormForFns}), which they further identify as the \index{formal group!universal constant extension}universal extension of \(\G\) by a constant \(p\)--divisible group of dimension \(1\).  In the presense of a global object \(\mathbb G\) specializing to \(\G\) (as in the case of \(\G_a\) or \(\G_m\)), they show how to modify this product to an analytically convergent power series, recovering the characteristic series for the \index{orientation!A hat genus@\(\widehat A\)--genus}\(\widehat A\)--genus and the \index{orientation!L genus@\(L\)--genus}\(L\)--genus.  The higher height analogues of these results seem very mysterious and very interesting.\footnote{Morava is generally full of interesting ideas about genera---see, for instance,~\cite{MoravaMotivicThomIso} and \cite{MoravaTHH}.}
 \end{remark}
 
 \begin{remark}[{\cite{AFG}}]
