spell out the complete decomposition of the bousfield class of E(d)

--- a/finite.tex
+++ b/finite.tex
@@ -1282,7 +1282,7 @@ L_{d-1} X \arrow{r} & L_{d-1} \widehat L_d X, & X_{\Q} \arrow{r} & \left( \prod_
 \end{center}
 \end{corollary}
 \begin{proof}[Analogy to \(j_* \vdash j^*\)]
-For the left-hand square, the inclusion of the open substack of dimension \(d-1\) into the one of dimension \(d\) has relatively closed complement the point of height \(d\).  Algebraically, this gives a \index{Mayer Vietoris sequence@Mayer--Vietoris sequence}Mayer--Vietoris sequence with analogous terms.  The right-hand square is analogous to the \index{ad{\`e}les}ad\`elic decomposition of abelian groups.\footnote{Whenever \(L_B L_A = 0\), \(L_{A \vee B}\) appears as the homotopy pullback of the cospan \(L_A \to L_A L_B \from L_B\).  Hence, this follows from \Cref{ChromaticFractureInput}, as well as the identification \(L_{E(d-1) \vee K(d)} \simeq L_{E(d)}\).}
+For the left-hand square, the inclusion of the open substack of dimension \(d-1\) into the one of dimension \(d\) has relatively closed complement the point of height \(d\).  Algebraically, this gives a \index{Mayer Vietoris sequence@Mayer--Vietoris sequence}Mayer--Vietoris sequence with analogous terms.  The right-hand square is analogous to the \index{ad{\`e}les}ad\`elic decomposition of abelian groups.\footnote{Whenever \(L_B L_A = 0\), \(L_{A \vee B}\) is the pullback of \(L_A \to L_A L_B \from L_B\).  Hence, this follows from \Cref{ChromaticFractureInput}, as well as the identifications \(L_{E(d)} \simeq L_{E(d-1) \vee K(d)} \simeq L_{K(0) \vee \cdots \vee K(d)}\).}
 \end{proof}
 
 \begin{remark}
