include the adic convergence formula for the logarithm

--- a/finite.tex
+++ b/finite.tex
@@ -589,7 +589,7 @@ In the other direction, the invariant differential coefficients can be recursive
 implicitly taking \(a_1 = 1\) and \(v_0 = p\).
 \end{proof}
 
-\Cref{pTypLogGivesNicePSeries} shows that, at least in the case that the ground ring is an integral domain, the \(p\)--series of a \(p\)--typical formal group law contains exactly as much information as the logarithm itself (and hence fully determines the formal group law).  We make this observation precise in the following important definition and theorem:
+\Cref{pTypLogGivesNicePSeries} shows that, at least in the case that the ground ring is an integral domain, the \(p\)--series of a \(p\)--typical formal group law contains exactly as much information as the logarithm itself (and hence fully determines the formal group law).\footnote{In the complete setting, there is another formula for recovering the logarithm from the \(p\)--series: \[\log_\phi(x) = \lim_{j \to \infty} \left( p^{-j} \cdot [p^j]_\phi(x) \right).\]}  We make this observation precise in the following important definition and theorem:
 
 \begin{definition}
 In the setting of a coordinate on a formal group over a torsion-free \(\Z_{(p)}\)--algebra, the following conditions are equivalent:
