fix overfull hbox around "Spec F_2[xi0, x1, ...]"

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -200,12 +200,12 @@ where we have translated to our previous notation by writing \(\xi_j\) for \(a_{
 
 Our last goal in this Lecture is to sketch a foothold that this example has furnished us with for the algebro-geometric interpretation of unstable cooperations.  First, we should remark that it has been shown that there is no manifestation of the homology of a space as any kind of classical comodule~\cite[Theorem 9.4]{BJW}, so we are unable to directly pursue an analogue of \Cref{FHGivesComodules} presenting the homology of a space as a Cartesian quasicoherent sheaf over some object.  This no-go result is quite believable from the perspective of cohomology operations: we have calculated in the case of \(E = \HFtwo\) that a generic unstable cohomology operation takes the form \[x \mapsto \sum_{\text{\(S\) a set of multi-indices}} \left(c_S \cdot \prod_{I \in S} \Sq^I(x)\right).\]  This inherently uses the multiplicative structure on \(\HFtwo^*(X)\), and the proof of the result of Boardman, Johnson, and Wilson rests entirely on the observation that decomposable elements cannot be mapped to indecomposable elements by maps of algebras, but maps of modules have no such control.\footnote{It is probably still possible to treat this carefully enough to cast the whole of unstable operations (and, in particular, the comonad \(G\)) into algebro-geometric language.}
 
-However, exactly this complaint is eliminated by passing to the additive unstable cooperations: all the product terms in the above formula vanish, and the homology of a space does indeed have the structure of a comodule for this Hopf algebra.  Still in the setting of our running example \(E = \HFtwo\), this makes \(\HFtwo_*(X)\) into a Cartesian quasicoherent sheaf for the simplicial scheme\footnote{This identification is somewhat subtle: we are using the fact that passing to homotopy groups of this simplicial scheme factors through passing through the \(\ast\)--indecomposable quotient; cf.\ \Cref{ShorterUnstableResns}.} \[\Ucontext{\HFtwo P} \simeq \Spec \F_2 \mmod \Spec Q^* \HFtwo P_0 \OS{\HFtwo P}{0}.\]  In this specific example, we can even identify what this simplicial scheme is: using \Cref{SteenrodAlgIdentifiedWithAutGa}, we have already made the identification
+However, exactly this complaint is eliminated by passing to the additive unstable cooperations: all the product terms in the above formula vanish, and the homology of a space does indeed have the structure of a comodule for this Hopf algebra.  Still in the setting of our running example \(E = \HFtwo\), this makes \(\HFtwo_*(X)\) into a Cartesian quasicoherent sheaf for the simplicial scheme\footnote{This identification is somewhat subtle: we are using the fact that passing to homotopy groups of this simplicial scheme factors through passing through the \(\ast\)--indecomposable quotient; cf.\ \Cref{ShorterUnstableResns}.} \[\Ucontext{\HFtwo P} \simeq \Spec \F_2 \mmod \Spec Q^* \HFtwo P_0 \OS{\HFtwo P}{0}.\]  In this specific example, we can even identify what this simplicial scheme is.  Using \Cref{SteenrodAlgIdentifiedWithAutGa}, we have already made the identification
 \begin{align*}
 \Spec \HFtwo P_0 \HFtwo P & \cong \InternalAut{\G_a} \\
 \left(f\co \F_2[\xi_0^\pm, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right),
 \end{align*}
-and \Cref{CalculationOfUnstableSteenrodHopfRing} presents \(\Spec \mathcal A P_0\) as the open subscheme of \(\Spec \F_2[\xi_0, \xi_1, \ldots]\) determined by the invertibility of \(\xi_0\).\footnote{Note that \(Q^* \HFtwo_* \OS{\HFtwo}{*}\) does \emph{not} form a Hopf algebra, essentially because it is missing a version of \(\chi\) that inverts \(\circ\)--multiplication.  It is remarkable that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for \(\HFtwo\) is\index{formal group!homomorphism}
+\Cref{CalculationOfUnstableSteenrodHopfRing} presents \(\Spec \mathcal A P_0\) as the open subscheme of \(\Spec \F_2[\xi_0, \xi_1, \ldots]\) determined by the invertibility of \(\xi_0\).\footnote{Note that \(Q^* \HFtwo_* \OS{\HFtwo}{*}\) does \emph{not} form a Hopf algebra, essentially because it is missing a version of \(\chi\) that inverts \(\circ\)--multiplication.  It is remarkable that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for \(\HFtwo\) is\index{formal group!homomorphism}
 \begin{align*}
 \Spec Q^* \HFtwo P_0 \OS{\HFtwo P}{0} & \cong \InternalEnd{\G_a} \\
 \left(f\co \F_2[\xi_0, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right).
