fix proof of 4.1.5 to match def 4.1.4

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -100,10 +100,10 @@ Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise
 \end{definition}
 
 \begin{lemma}\label{HopfRingFromOneRingSpectrum}
-If \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra.
+If an even-periodic \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra.
 \end{lemma}
 \begin{proof}
-The proof is a matter of spelling out the precondition.  For \(X\) satisfying this freeness condition, there is again a splitting \(E(X) \simeq \prod_\ell \OS{E}{n_\ell}\).  We interpret this at the level of algebra by defining a functor \[G\co \CatOf{Modules}_{E_0}^{\mathrm{free}} \to \CatOf{Modules}_{E_0}\] which sends \(E_0\) to \(E_0 \OS{E}{0}\) and which splits over direct sums.  The enriched Hopf ring structure of \(\pi_0 \sheaf{UD}_E(S^0)[\le 2]\) endows \(G\) with a comonad structure, and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
+For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq \prod_\ell \OS{E}{n_\ell} \simeq \prod_\ell \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left(\prod_\ell E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
 \end{proof}
 
 \begin{theorem}[{\cite[Theorem 6.17]{BCM}}]
