--- a/cooperations.tex
+++ b/cooperations.tex
@@ -99,20 +99,12 @@ These structures are enough to pin down the behavior of both \(E_0 X\) as the un
 Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise to a comonad \(G(M) = M \otimes_{E_0} E_0 \OS{E}{0}\), and comodules for the Hopf ring are defined to be \(G\)--coalgebras.\index{comodule!coalgebra}
 \end{definition}
 
-\begin{lemma}\label{HopfRingFromOneRingSpectrum}
-If an even-periodic \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra.
+\begin{lemma}[{\cite[Theorem 6.17]{BCM}}]\label{HopfRingFromOneRingSpectrum}
+If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is thus presented as \[E_2^{s} = L^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
 \end{lemma}
 \begin{proof}
 For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq \prod_\ell \OS{E}{n_\ell} \simeq \prod_\ell \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left(\prod_\ell E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
 \end{proof}
-
-\begin{theorem}[{\cite[Theorem 6.17]{BCM}}]
-In the above case, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is the cobar resolution for \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is presented as
-\[\pushQED{\qed}
-E_2^{s} = L^s\CatOf{Coalgebras}_G(E_0, E_0 X). \qedhere
-\popQED
-\]
-\end{theorem}
 
 At this point, it is instructive to work through an example to understand the kinds of objects we have constructed.  At first appraisal, these objects appear to be so bottomlessly complicated that it must be a hopeless enterprise to actually compute even just the enriched Hopf ring associated to a spectrum \(E\).  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be the aperiodic spectrum \(E = \HFtwo\), and the place to start is with a very old lemma:
 \begin{lemma}
