--- a/finite.tex
+++ b/finite.tex
@@ -876,7 +876,7 @@ Because \Cref{Symmetric2CocycleLemma} gives different calculations of \(H^*(\G_a
 \end{proof}
 
 \begin{proof}[{Proof of \Cref{LubinTateModuliThm} using \Cref{LubinTateModuliThmInFGLTerms}}]
-We will prove this inductively on the order of the infinitesimal neighborhood of \(\Spec k = \Spec R / \m\) in \(\Spf R\):\footnote{The reader may also be interested in a proof presented in more stacky language~\cite[Reduction to Theorem 21.5]{LurieChromaticCourseNotes}.} \[\Spec R / \m \xrightarrow{j_r} \Spec R/\m^r \xrightarrow{i_r} \Spf R.\]  Suppose that we have demonstrated the Theorem for \(+_{\G_{r-1}} = i_{r-1}^* (+_{\G})\), so that there is a map \(\alpha_{r-1}\co \W_p(k)\ps{u_1, \ldots, u_{d-1}} \to R/\m^{r-1}\) and a strict isomorphism \(g_{r-1}\co +_{\G_{r-1}} \to \alpha_{r-1}^* +_{\tilde \Gamma}\) of formal group laws.  The exact sequence \[0 \to \m^{r-1} / \m^r \to R/\m^r \to R/\m^{r-1} \to 0\] exhibits \(R/\m^r\) as a square--zero extension of \(R/\m^{r-1}\) by \(M = \m^{r-1} / \m^r\).  Then, let \(\beta\) be \emph{any} lift of \(\alpha_{r-1}\) and \(h\) be \emph{any} lift of \(g_{r-1}\) to \(R/I^r\), and let \(A\) and \(B\) be the induced group laws
+Fix any group law \(+_{\tilde \Gamma}\) over the ring \(\W_p(k)\ps{u_1, \ldots, u_{d-1}}\) such that for each \(j\), \[x +_{\tilde \Gamma} y \cong x + y + u_j c_{p^j}(x, y) \pmod{u_1, \ldots, u_{j-1}, (x, y)^{p^j+1}}.\]  We will prove the claim inductively on the order of the infinitesimal neighborhood of \(\Spec k = \Spec R / \m\) in \(\Spf R\):\footnote{The reader may also be interested in a proof presented in more stacky language~\cite[Reduction to Theorem 21.5]{LurieChromaticCourseNotes}.} \[\Spec R / \m \xrightarrow{j_r} \Spec R/\m^r \xrightarrow{i_r} \Spf R.\]  Suppose that we have demonstrated the Theorem for \(+_{\G_{r-1}} = i_{r-1}^* (+_{\G})\), so that there is a map \(\alpha_{r-1}\co \W_p(k)\ps{u_1, \ldots, u_{d-1}} \to R/\m^{r-1}\) and a strict isomorphism \(g_{r-1}\co +_{\G_{r-1}} \to \alpha_{r-1}^* +_{\tilde \Gamma}\) of formal group laws.  The exact sequence \[0 \to \m^{r-1} / \m^r \to R/\m^r \to R/\m^{r-1} \to 0\] exhibits \(R/\m^r\) as a square--zero extension of \(R/\m^{r-1}\) by \(M = \m^{r-1} / \m^r\).  Then, let \(\beta\) be \emph{any} lift of \(\alpha_{r-1}\) and \(h\) be \emph{any} lift of \(g_{r-1}\) to \(R/I^r\), and let \(A\) and \(B\) be the induced group laws
 \begin{align*}
 x +_A y & = \beta^* \tilde \phi, &
 x +_B y & = h\left( h^{-1}(x) +_{\G_r} h^{-1}(y) \right).
