don't write [[1]], it's confusing

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -140,7 +140,7 @@ We now turn to concrete computations for \(E = \HFtwo\) and \(F = \HFtwo\).  To 
 This \(\Tor\) spectral sequence collapses at the \(E^2\)--page.
 \end{corollary}
 \begin{proof}
-As an algebra, the homology \(\HFtwo_*(\F_2)\) of the discrete space \(\F_2\) is presented by a group ring, which we can identify with a truncated polynomial algebra: \[\HFtwo_*(\F_2) \cong \F_2[\F_2] \cong \F_2[[1]] / ([1]^{\ast 2} - [0]) \cong \F_2[[1] - [0]] / ([1] - [0])^{\ast 2}.\]  The \(\Tor\)--algebra of this is then divided power on a single class: \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) = \Gamma[\alpha_{()}].\]  In order for the two computations to agree, there can therefore be no differentials in the spectral sequence.
+As an algebra, the homology \(\HFtwo_*(\F_2)\) of the discrete space \(\F_2\) is presented by a group ring, which we can identify with a truncated polynomial algebra: \[\HFtwo_*(\F_2) \cong \F_2[\F_2] \cong  \F_2[a] / a^{\ast 2}, \quad \text{where \(a = [1] - [0]\)}.\]  The \(\Tor\)--algebra of this is then divided power on a single class: \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) = \Gamma[\alpha_{()}].\]  In order for the two computations to agree, there can therefore be no differentials in the spectral sequence.
 \end{proof}
 
 We now summarize the rest of the induction:
