--- a/cooperations.tex
+++ b/cooperations.tex
@@ -622,7 +622,7 @@ In particular, the spaces \(\OS{BP\<n\>}{k}\) in these bands \emph{are} independ
 
 Our goal in this Lecture is to give a compact presentation of formal groups based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field \(k\) forms an abelian category.  It follows abstractly that this category admits a presentation as the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and we will give an overview of some of its main results, including two different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
 
-In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\), and recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents of the form \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up, recalling that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The product map and two projection maps
+In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\), and recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents of the form \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up, recalling that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The group operation and two projections
 \begin{align*}
 \mu, \pi_1, \pi_2\co & \G \times \G \to \G \\
 \intertext{induce maps}
