--- a/finite.tex
+++ b/finite.tex
@@ -230,7 +230,7 @@ In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebraic desce
 \end{remark}
 
 \begin{example}
-Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, \(\HFtwo P\) certainly has this property: there is only one possible algebraic map \(\F_2 \to \mathcal A_*\), so {\FH} is necessarily satisfied.  Our work in \Cref{TheSteenrodAlgebraSection}\footnote{The reader should spend a moment contrasting our two approaches to the definition of \(\context{\HFtwo}(X)\).  Previously, we assumed that \(X\) was finite type and worked with cohomology---but under exactly this assumption, the cohomology of \(X\) can always be written as the homology of \(Y\) for another finite spectrum satisfying \(X = DY\).} thus grants us access to a description of the context for \(\HFtwo\):\footnote{This is a bit glib: this gives a presentation of the \emph{even} part of the context for \(\HFtwo P\), and the ``\(\G_a\)'' in the formula is \(\CP^\infty_{\HFtwo}\) rather than \(\RP^\infty_{\HFtwo}\).  This sleight of hand abuts the discussion of Bocksteins in \Cref{ASSForLKdS}.} \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
+Most of the homology theories we will discuss satisfy {\CH} and {\FH}.  For example, \(\HFtwo P\) has this property: there is only one possible algebraic map \(\F_2 \to \mathcal A_*\), so {\FH} is necessarily satisfied.  Our work in \Cref{TheSteenrodAlgebraSection}\footnote{The reader should spend a moment contrasting our two approaches to the definition of \(\context{\HFtwo}(X)\).  Previously, we assumed that \(X\) was finite type and worked with cohomology---but under exactly this assumption, the cohomology of \(X\) can always be written as the homology of \(Y\) for another finite spectrum satisfying \(X = DY\).} thus grants us access to a description of the context for \(\HFtwo\):\footnote{This is a bit glib: this gives a presentation of the \emph{even} part of the context for \(\HFtwo P\), and the ``\(\G_a\)'' in the formula is \(\CP^\infty_{\HFtwo}\) rather than \(\RP^\infty_{\HFtwo}\).  This sleight of hand abuts the discussion of Bocksteins in \Cref{ASSForLKdS}.} \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
@@ -262,10 +262,10 @@ The algebraic moduli \(\context{MU} = (\Spec MU_*, \Spec MU_* MU)\) and the topo
 If \(E\) is a complex-oriented ring spectrum, then the simplicial sheaf \(\context{MU}(E)\) has an extra degeneracy, which causes the \(MU\)--based Adams spectral sequence for \(E\) to degenerate.  In this sense, the ``stackiness'' of \(\context{MU}(E)\) is exactly a measure of the failure of \(E\) to be orientable.
 \end{remark}
 
-\begin{remark}
+\begin{remark}[{cf.\ \cite[Theorem 1.2.4.1]{LurieHA}, \cite[Section 1]{MillerRelations}}]
 It is also possible to construct an \(E\)--Adams spectral sequence by iteratively smashing with the fiber sequence \(\overline E \to \S \to E\) to form the tower
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 \S \sm X \arrow{d} & \overline E \sm X \arrow{l} \arrow{d} & \overline E^{\sm 2} \sm X \arrow{l} \arrow{d} & \cdots \arrow{l} \\
 E \sm X & E \sm \overline E \sm X & E \sm \overline E^{\sm 2} \sm X & \cdots.
 \end{tikzcd}
