fix a bad linebreak

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -688,7 +688,7 @@ This is independent of choice of lift up to coherent isomorphism.  Given any oth
 
 Next, note that the module \(D^*(\G_0)\) carries some natural operations:
 \begin{itemize}
-\item Arithmetic: \(D^*(\G_0)\) is naturally a \(\W_p(k)\)--module, with the action by \(\ell \in \W_p(k)\) corresponding to multiplication--by--\(\ell\) internal to \(\G_0\).
+\item Arithmetic: \(D^*(\G_0)\) is a \(\W_p(k)\)--module, with the action by \(\ell \in \W_p(k)\) corresponding to multiplication--by--\(\ell\) internal to \(\G_0\).
 \item \index{Frobenius}Frobenius: The map \(x \mapsto x^p\) is a homomorphism of formal groups modulo \(p\), so it induces a \(\phi\)--semilinear map \(F\co D^*(\G_0) \to D^*(\G_0)\).  That is, \[F(\alpha v) = \alpha^\phi F(v),\] where \(\phi\) is a lift of the Frobenius on \(k\) to \(\W_p(k)\).
 \item \index{Verschiebung}Verschiebung: Inspired by \Cref{EveryLogHaspTypification}, we might also seek a Verschiebung operator \(V\) satisfying \(FV = p\).  Our explicit formula for \(F\) lets us guess such a map: \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\]  It satisfies \(FV = p\) and anti-semilinearity: \(aV(v) = V(a^\phi v)\).
 \end{itemize}
