--- a/cooperations.tex
+++ b/cooperations.tex
@@ -714,7 +714,7 @@ We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height forma
 Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.\F_p\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  We extract the subgroup scheme \(\alpha_2\) as the finite Dieudonn\'e quotient module \(D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)\) of the Dieudonn\'e module associated to \(\G_a\) above.  We can now verify the four claims (all over \(\F_2\)) from \Cref{Alpha2Example}:
 \begin{itemize}
 \item \textit{The group scheme \(\alpha_2\) has the same underlying structure ring as \(\mu_2 = \mathbb{G}_m[2]\) but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on \(D^*(\mu_2)\) but wholly trivially on \(D^*(\alpha_2)\).\footnote{See also~\cite[Example 8.5]{StricklandFPFP}.}
-\item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{x\}\).  The action of both \(F\) and \(V\) on \(x\) must vanish after quotienting by \(2\), so it must be the case that \(Fx = 2cx\) and \(Vx = 2dx\) for some constants \(c\) and \(d\)---but this violates \(FVx = 2x\).
+\item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{x\}\).  The action of both \(F\) and \(V\) on \(x\) must vanish after quotienting by \(2\), so it must be the case that \(Fx = 2cx\) and \(Vx = 2dx\) for some constants \(c\) and \(d\)---but this violates \(VFx = 2x\).
 \item \textit{If \(E/\mathbb{F}_2\) is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  One definition of \textit{supersingular} is that \(\widehat E\) is a formal group of height \(2\).  The claim then follows from calculating the action of \(F\) and \(V\) to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as \(\F_2\)--modules, but not as Dieudonn\'e modules.
 \item \textit{The subgroups of \(\alpha_2 \times \alpha_2\) of rank two are parameterized by \(\mathbb{P}^1\).}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{x_1, x_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank \(2\) subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a \(1\)--dimensional quotient module, and the ways to choose the kernel of this projection encompass a \(\P^1\).
 \end{itemize}
@@ -744,7 +744,7 @@ Having gotten some feel for the behavior and the usefulness of the Dieudonn\'e f
 \item \index{homothety}Homothety: given a scalar \(a \in A\), we define \(\theta_a \gamma(t) = \gamma(a \cdot t)\).
 \item \index{Verschiebung}Verschiebung: given an integer \(n \ge 1\), we define \(V_n \gamma(t) = \gamma(t^n)\).
 \item \index{formal group!l series@\(\ell\)--series}Arithmetic: given two curves \(\gamma_1\) and \(\gamma_2\), we can use the group law on \(\G\) to define \(\gamma_1 +_{\G} \gamma_2\).  Moreover, given \(\ell \in \Z\), the \(\ell\)--fold sum in \(\G\) gives an operator \[\ell \cdot \gamma = \overset{\text{\(\ell\) times}}{\overbrace{\gamma +_{\G} \cdots +_{\G} \gamma}}.\]  This extends to an action by \(\ell \in \W_p(k)\).
-\item \index{Frobenius}Frobenius: given an integer \(n \ge 1\), we define \[F_n \gamma(t) = \sumG_{i=1}^n \gamma(\zeta_n t^{1/n}),\] where \(\zeta_{n}\) is an \(n\){\th} root of unity.  (This formula is invariant under permuting the root of unity chosen, so determines a curve defined over the original ground ring by Galois descent.)
+\item \index{Frobenius}Frobenius: given an integer \(n \ge 1\), we define \[F_n \gamma(t) = \sumG_{i=1}^n \gamma(\zeta_n^i t^{1/n}),\] where \(\zeta_{n}\) is an \(n\){\th} root of unity.  (This formula is invariant under permuting the root of unity chosen, so determines a curve defined over the original ground ring by Galois descent.)
 \end{itemize}
 
 \begin{definition}[{cf.\ \Cref{EveryLogHaspTypification}}]
