--- a/cooperations.tex
+++ b/cooperations.tex
@@ -698,12 +698,12 @@ With this, we come to the main theorem of this Lecture:
 The (de Rham--Dieudonn\'e) functor \(D^*\) determines a contravariant equivalence of categories between smooth \(1\)--dimensional formal groups \(\G_0\) over \(k\) of finite \(p\)--height and \index{Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules \(M\) over the ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] which are additionally free and finite rank over \(\W_p(k)\). \qed
 \end{theorem}
 
-\begin{remark}
+\begin{remark}\label{InvariantsFromDModule}
 Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor \(D^*\).  For example, the \(\W_p(k)\)--rank of \(D^*(\G_0)\) computes the height of \(\G_0\).  Additionally, the quotient \(D^*(\G_0) / FD^*(\G_0)\) is canonically isomorphic to the cotangent space \(T_0^* \G_0 \cong \omega_{\G_0}\), so that \[\dim \G_0 = \dim_k D^*(\G_0) / FD^*(\G_0).\]
 \end{remark}
 
 \begin{example}
-Consider \(\G_0 = \G_m\).  For \(x\) the usual coordinate, we have \([p](x) = x^p\), and hence the Frobenius \(F\) acts on \(D^*(\G_m)\) by \(Fx = px\).  It follows that \(Vx = x\) and \(D^*(\G_m) \cong \W_p(k)\{x\}\) with this \(\Cart_p\)--module structure.
+Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associated to a formal group \(\Gamma\) of height \(1\) must take the form \[D^*(\Gamma) = \left. \W_p(k)\{x\} \middle/ \left( \begin{array}{c} Fx = u^{-1}px \\ Vx = ux \end{array} \right)\right.\] for some constant \(u\)~(cf.\ \cite[Theorem 4.2.2]{MoravaFormsOfKthy}).  In the case of \(\Gamma = \G_m\), this constant is simply \(u = 1\), owing essentially to the formula \([p](x) = x^p\) for the standard coordinate on the multiplicative formal group.
 \end{example}
 
 \begin{example}
