--- a/cooperations.tex
+++ b/cooperations.tex
@@ -779,8 +779,8 @@ This map has incredibly good properties.  It is equivariant for the action of \(
 
 In \Cref{PeriodMapFigure} we sketch the period map at \(n = 2\) and \(p = 2\), which has the following list of properties~\cite[Appendix 25]{HopkinsGrossEquivVBs}, \cite{Yu}:
 \begin{itemize}
-\item The center of the \(\Z_{p^2}\)--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an \(\mathcal O_A\)--module structure.  It has \(\pi\)--series \([\pi](x) = \pi x + x^{p^2}\).
-\item There are three nontrivial points in \(\G[2]\): \(\alpha\), \(\beta\), and \(\alpha + \beta\).  Quotienting by them gives three points at order \(1/(p+1)\), the first bunch of \index{Lubin Tate stack@Lubin--Tate stack!canonical lift!quasicanonical}\textit{quasicanonical lifts}, which have partial formal \(\mathcal O_A\)--module structures.
+\item The center of the \(\Z_{p^2}\)--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an \(\mathcal O_A\)--module structure~\cite{LubinTateOther}.  It has \(\pi\)--series \([\pi](x) = \pi x + x^{p^2}\).
+\item There are three nontrivial points in \(\G[2]\): \(\alpha\), \(\beta\), and \(\alpha + \beta\).  Quotienting by them gives three points at order \(1/(p+1)\), the first bunch of \index{Lubin Tate stack@Lubin--Tate stack!canonical lift!quasicanonical}\textit{quasicanonical lifts}, which have partial formal \(\mathcal O_A\)--module structures~\cite{Gross}.
 \item The map \(\pi_{GH}\) sends the canonical lift to \(0 = [1:0]\), sends the first order quasicanonical points to \(\infty = [0:1]\), and alternates from there.  The three branches of ``directions to quotient'' carve \(\mathbb P^1\) up into three lobes.  This is because \(\pi_{GH}\) is equivariant for \index{isogeny}\textit{isogenies}, and quotienting by one of these order \(2\) subgroups is a lift of the Frobenius isogeny on the residue formal group.
 \item Out to order \(1/p\), \(\pi_{GH}\) is injective.
 \item You can compute these orders using the Newton polygon associated to the \(\pi\)--series.
