--- a/cooperations.tex
+++ b/cooperations.tex
@@ -703,7 +703,7 @@ Several invariants of the formal group associated to a Dieudonn\'e module can be
 \end{remark}
 
 \begin{example}
-Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associated to a formal group \(\Gamma\) of height \(1\) must take the form \[D^*(\Gamma) = \left. \W_p(k)\{x\} \middle/ \left( \begin{array}{c} Fx = u^{-1}px \\ Vx = ux \end{array} \right)\right.\] for some constant \(u\)~(cf.\ \cite[Theorem 4.2.2]{MoravaFormsOfKthy}).  In the case of \(\Gamma = \G_m\), this constant is simply \(u = 1\), owing essentially to the formula \([p](x) = x^p\) for the standard coordinate on the multiplicative formal group.
+Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associated to a formal group \(\Gamma\) of height \(1\) must take the form \[D^*(\Gamma) = \left. \W_p(k)\{x\} \middle/ \left( \begin{array}{c} Fx = (u^{-1})^{-\phi}px \\ Vx = ux \end{array} \right)\right.\] for a constant \(u\), referred to as the \textit{modulus}~(cf.\ \cite[Theorem 4.2.2]{MoravaFormsOfKthy}).  In the case of \(\Gamma = \G_m\), this constant is simply \(u = 1\), owing essentially to the formula \([p](x) = x^p\) for the standard coordinate on the multiplicative formal group.
 \end{example}
 
 \begin{example}
