--- a/cooperations.tex
+++ b/cooperations.tex
@@ -658,7 +658,7 @@ Consider the case that \(A\) is torsion-free, and set \(K = A \otimes \Q\) so th
 0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c} \mathrm{d}f \in A\ps{x}\dx, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & PH^1_{dR}(\G/A) \arrow{r} \arrow{u} & 0,
 \end{tikzcd}
 \end{center}
-where \(x\) is a coordinate on \(\G\), and \(\delta\) is defined by \(\delta [\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\omega]\).
+where \(x\) is a coordinate on \(\G\), and \(\delta\) is defined by \(\delta f = (\mu^* - \pi_1^* - \pi_2^*)f\).
 \end{example}
 
 % \begin{lemma}
