fix rotten typesetting around 4.1.12

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -159,14 +159,7 @@ Hence, the spectral sequence collapses.  To see that there are no multiplicative
 
 \begin{corollary}\label{CalculationOfUnstableSteenrodHopfRing}
 There is an isomorphism
-\begin{center}
-\begin{tikzcd}
-\HFtwo_* \OS{\HFtwo}{*} & \arrow["\simeq"']{l} \frac{\bigotimes_t \bigotimes_{j_1 < \cdots < j_t} \F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)}]}{(\alpha_J)^{\ast 2} = 0}.
-\end{tikzcd}
-Restricting to sums of \(\ast\)--products of terms of a fixed \(t\) degree recovers \(\HFtwo_* \OS{\HFtwo}{t}\), and this algebraic model is the \(t\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra. \qed
-\end{center}
-
-where \((-)^{\wedge t}\) denotes the \(t\)\textsuperscript{th} exterior power in the category of Hopf algebras. \qed
+\[\HFtwo_* \OS{\HFtwo}{*} \cong \bigotimes_t \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)} \mid j_1 \le \cdots \le j_t]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_t)})^{\ast 2}} \cong \bigotimes_t (\HFtwo_* \RP^\infty)^{\sm t},\] where \((\HFtwo_* \RP^\infty)^{\sm t}\) denotes the \(t\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra. \qed
 \end{corollary}
 
 \begin{remark}[{\cite[Theorems 8.5 and 8.11]{Wilson}}]
