--- a/cooperations.tex
+++ b/cooperations.tex
@@ -63,7 +63,7 @@ The \index{descent!object!unstable}\textit{unstable descent object} is the cosim
 \cdots
 \end{tikzcd}
 \right\}.\]
-Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), and a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by: \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad}.\]
+Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{The curious reader can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), and a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by: \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad}.\]
 \end{definition}
 
 The remainder of this section will be spent trying to understand the spectral sequence associated to the coskeletal filtration of such an unstable descent object.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed above in order from least to most difficult.
